Bug 301039: Top border threedhighlight one pixel too thick as well the as "click-down" menu (all, errors, warnings, etc.) not centered, patch by Bryan <BoxerBoi76@hotmail.com>, r=kevin, a=asa

--- a/mozilla/toolkit/themes/winstripe/global/console/console.css
+++ b/mozilla/toolkit/themes/winstripe/global/console/console.css
@@ -137,3 +137,10 @@
 toolbarseparator {
   min-height: 1em;
 }
+
+/* ::::: Fix JavaScript Console toolbar button text spacing ::::: */
+
+.toolbarbutton-text {
+  -moz-padding-start: 0px;
+  -moz-padding-end: 5px;
+}
